@@ -1,8 +1,8 @@
 Package: FENmlm
 Type: Package
 Title: Fixed Effects Nonlinear Maximum Likelihood Models
-Version: 2.4
-Date: 2019-02-15
+Version: 2.4.1
+Date: 2019-02-25
 Authors@R: person("Laurent", "Berge", email = "laurent.berge@uni.lu", role = c("aut", "cre"))
 Imports: stats, graphics, utils, parallel, Formula, MASS, numDeriv,
         Rcpp
@@ -15,8 +15,8 @@ RoxygenNote: 6.1.0
 Suggests: knitr, rmarkdown
 VignetteBuilder: knitr
 NeedsCompilation: yes
-Packaged: 2019-02-07 11:47:23 UTC; laurent.berge
+Packaged: 2019-02-25 09:56:47 UTC; laurent.berge
 Author: Laurent Berge [aut, cre]
 Maintainer: Laurent Berge <laurent.berge@uni.lu>
 Repository: CRAN
-Date/Publication: 2019-02-07 12:03:28 UTC
+Date/Publication: 2019-02-25 10:30:13 UTC
