@@ -1,20 +1,20 @@
-1a8c385b69d9ff299af42b7b5261fbcc *DESCRIPTION
+a425695bfd387de831e8f018ac2e597c *DESCRIPTION
 2b87b0907a1ff0f6fdee1abcdead467c *NAMESPACE
 04bd266e977429a7abe3a3798ba649bc *R/FENmlm.R
 1522550c78a4e47558dd28796819c8f0 *R/ML_Families.R
 eb7f4bbb48391240c582b858bad78a48 *R/MiscFuns.R
 7766606a495a1583db11fd2b5414f6f5 *R/RcppExports.R
 f60fc06a6a0d987022027cf8e0ac64c9 *R/femlm.R
-68a58571aa0da6444899a2c69d254ed8 *build/vignette.rds
+3c00a28c82db258d09806769abaa7ee4 *build/vignette.rds
 824e22c1ef20c77eb0da44f89f1f814e *data/datalist
 b86a0921b83d84ce8e09ecda40e13933 *data/trade.RData
 ccf16785c29ed52fd598e1604a6e7001 *demo/00Index
 ffdfa6c4a622c298ebb5e618670616aa *demo/femlm.R
 1e800484b95bb181b0151cc61ec4648c *inst/CITATION
-43184d93831e82998548aa8af61c959c *inst/NEWS.Rd
-bfcc08eee68e43e4700ff2ec3452a900 *inst/doc/FENmlm.R
-a20487c7c94d4f0c64fa92254bd0785c *inst/doc/FENmlm.Rmd
-bcf431df8e499a89b2a8c7e7beaf1d04 *inst/doc/FENmlm.html
+354904ef20dac1f003c994248c091f63 *inst/NEWS.Rd
+f53f8b6590087efdd8d9d40c6828467c *inst/doc/FENmlm.R
+03d84befd32d1c06a7a08b8bd4de8bbe *inst/doc/FENmlm.Rmd
+606271709070984b1ec8ee4b507b1d00 *inst/doc/FENmlm.html
 263a85875f9128e15a24e9f62570f6b2 *man/AIC.femlm.Rd
 5c9312d2e079fbe6346f0cbacf2f0f2f *man/BIC.femlm.Rd
 236d8d05624ef85868e3bb23b2b35e27 *man/FENmlm-package.Rd
@@ -47,4 +47,4 @@ bc0ce6d213227d14a4864f7a42ddc8eb *src/Makevars.win
 35841416cc59d544e47418c48cf184a0 *src/convergence.cpp
 77461eeaf2fa00f084239a600d34d1ba *src/misc_funs.cpp
 e34e55237b25cae925b0938af634bf64 *src/parallel_funs.cpp
-a20487c7c94d4f0c64fa92254bd0785c *vignettes/FENmlm.Rmd
+03d84befd32d1c06a7a08b8bd4de8bbe *vignettes/FENmlm.Rmd
